# adblock-list-compiler

./: .gitignore  .tool-versions  Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: cli.rs  config.rs  config_url.rs  mod.rs
src/cli_run/: check_config.rs  compile.rs  config_check.rs  mod.rs
src/commands/: check_config.rs  compile.rs  mod.rs  test_config.rs
src/compiler/: adblock.rs  blacklist.rs  compiler.rs  fetch_source.rs  mod.rs  rewrites.rs  whitelist.rs
src/compiler/fetch_source/: http.rs  mod.rs
src/compiler/parser/: cname.rs  domain.rs  host.rs  mod.rs
src/config/: config_provider.rs  fetch_config.rs  mod.rs  provider.rs
src/fetch/: http.rs  mod.rs
src/output/: mod.rs  zone.rs
src/service/: mod.rs
src/service/compiler/: blacklist.rs  mod.rs  whitelist.rs
src/service/fetch_source/: mod.rs
src/service/output_format/: mod.rs
src/service/parser/: cname.rs  domains.rs  hosts.rs  mod.rs  zone.rs
src/source_config/: mod.rs  provider.rs  source_config.rs
