[package]
name = "adblock-list-compiler"
version = "0.0.4"
edition = "2021"
description = "CLI tool to compile multiple adblock list sources into a single file"
license = "MIT"
repository = "https://github.com/ragibkl/adblock-list-compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.15.6"
async-trait = "0.1"
clap = { version = "4.0", features=["derive"] }
idna = "0.3.0"
lazy_static = "1.4.0"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version ="1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.3"

[[bin]]
name = "ablc"
path = "src/main.rs"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
